--- a/Product_review_Card_Component/index.html
+++ b/Product_review_Card_Component/index.html
@@ -11,7 +11,7 @@
         </title>
 
           <!-- build:css css/main.css -->
-          <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
           <link rel="stylesheet" href="./css/styles.css"/>
           <!-- endbuild -->
           <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat">
