--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
-Hello World
-<a href="./Product_review_Card_Component/index.html">Product Review</a>
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <title>
+        Zee's Porfolio
+    </title>
+</head>
+
+<body>
+    <div>
+        <h4>Zee's Porfolio (under construction) </h4>
+    </div>
+    
+    <div>
+        <a href="./Product_review_Card_Component/index.html">Product Review</a>
+    </div>
+
+    <div>
+        <a href="./OrderSummaryComponent/index.html">Order Summary Card</a>
+    </div>
+    
+</body>
+
+</html>
+
+
+
