--- a/OrderSummaryComponent/index.html
+++ b/OrderSummaryComponent/index.html
@@ -19,7 +19,7 @@
   <div class="position-absolute top-50 start-50 translate-middle">
 
     <div class="card border-0 text-center rounded-5" style="max-width: 450px;">
-      <img class="card-img-top img-fluid rounded-top" src="./images/illustration-hero.svg" alt="Card image cap"/>
+      <img class="card-img-top img-fluid rounded-top" src="./images/illustration-hero.svg" alt="Music Order"/>
 
       <div class="card-body">
         <h5 class="card-title" style="padding-bottom: 17px;">Order Summary</h5>
