--- a/QrCodeComponent/index.html
+++ b/QrCodeComponent/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./css/styles.css"/>
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
   
-  <title>Frontend Mentor | QR code component</title>
+  <title>QR Code Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="position-absolute top-50 start-50 translate-middle">
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="card border-0 text-center rounded-4" id="cardStyle" >
+      <img class="card-img-top img-fluid rounded" src="./images/image-qr-code.png" alt="QR Code" style="padding: 16px;"/>
+      <div class="card-body">
+        <h5 class="card-title" style="padding-bottom: 16px;">
+          Improve your front-end skills by building projects
+        </h5>
+        <p class="card-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+        
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
