update index list

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <div>
         <a href="./OrderSummaryComponent/index.html">Order Summary Card</a>
     </div>
+
+    <div>
+        <a href="./QrCodeComponent/index.html">QR Code Card</a>
+    </div>
     
 </body>
 
