--- a/QrCodeComponent/index.html
+++ b/QrCodeComponent/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./css/styles.css"/>
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
   
@@ -15,8 +16,8 @@
 
   <div class="position-absolute top-50 start-50 translate-middle">
 
-    <div class="card border-0 text-center rounded-4" id="cardStyle" >
-      <img class="card-img-top img-fluid rounded" src="./images/image-qr-code.png" alt="QR Code" style="padding: 16px;"/>
+    <div class="card border-0 text-center" id="cardStyle" >
+      <img class="card-img-top img-fluid" src="./images/image-qr-code.png" alt="QR Code" style="padding: 16px;">
       <div class="card-body">
         <h5 class="card-title" style="padding-bottom: 16px;">
           Improve your front-end skills by building projects
