--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </div>
     
     <div>
-        <a href="./QrCodeComponent/index.html">QR Code Card</a>
+        <a href="./QrCodeComponent/index.html" target="_blank>QR Code Card</a>
     </div>
     <div>
-        <a href="./ProductPreviewCardComponent/index.html">Product Review</a>
+        <a href="./ProductPreviewCardComponent/index.html" target="_blank>Product Review</a>
     </div>
 
     <div>
-        <a href="./OrderSummaryComponent/index.html">Order Summary Card</a>
+        <a href="./OrderSummaryComponent/index.html" target="_blank>Order Summary Card</a>
     </div>    
 </body>
 
