--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <a href="./QrCodeComponent/index.html" target="_blank">QR Code Card</a>
     </div>
     <div>
-        <a href="./ProductPreviewCardComponent/index.html" target="_blank">Product Review</a>
+        <a href="./ProductPreviewCardComponent/index.html" target="_blank">Product Review Card</a>
+    </div>
+
+    <div>
+        <a href="./3ColumnPreviewCardComponent/index.html" target="_blank">Three Column Preview Card</a>
     </div>
 
     <div>
