Order Summary Card - Done

--- a/OrderSummaryComponent/index.html
+++ b/OrderSummaryComponent/index.html
@@ -17,15 +17,15 @@
 <body>
 
   <div class="container" >
-    <div class="row">
+    <div class="row ">
       <div class="col">
 
         <div class="card border-0 text-center position-absolute top-50 start-50 translate-middle" id="mainContainer">
           <img class="card-img-top img-fluid" src="./images/illustration-hero.svg" alt="Music Order"/>
 
           <div class="card-body">
-            <h5 class="card-title" style="margin: 20px 48px 17px 48px;">Order Summary</h5>
-            <p class="card-text" style="margin: 17px 48px 20px 48px;">You can now listen to millions of songs, audiobooks, and podcasts on any 
+            <h5 class="card-title">Order Summary</h5>
+            <p class="card-text">You can now listen to millions of songs, audiobooks, and podcasts on any 
               device anywhere you like!
             </p>
 
