--- a/3ColumnPreviewCardComponent/index.html
+++ b/3ColumnPreviewCardComponent/index.html
@@ -18,6 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="card-group position-absolute top-50 start-50 translate-middle">
+
         <div class="col">
           <div class="card border-0" id="sedansCard">
             <img src="./images/icon-sedans.svg" class="card-img-top img-fluid" alt="Sedans">
@@ -25,7 +26,7 @@
               <h5 class="card-title">Sedans</h5>
               <p class="card-text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
                 or on your next road trip.</p>
-              <button class="btn" style="color: #E28625;">Learn More</button>
+              <button type="button" class="btn btn-sedans";>Learn More</button>
             </div>
           </div>
         </div>
@@ -37,7 +38,7 @@
               <h5 class="card-title">SUVs</h5>
               <p class="card-text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
                 and off-road adventures.</p>
-              <button class="btn" style="color: #006971;">Learn More</button>
+              <button class="btn btn-suv">Learn More</button>
             </div>
           </div>
         </div>
@@ -49,7 +50,7 @@
               <h5 class="card-title">Luxury</h5>
               <p class="card-text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
                 rental and arrive in style.</p>
-              <button class="btn" color: #004140;>Learn More</button>
+              <button class="btn btn-luxury">Learn More</button>
             </div>
           </div>
         </div>
