--- a/3ColumnPreviewCardComponent/index.html
+++ b/3ColumnPreviewCardComponent/index.html
@@ -15,9 +15,12 @@
  
 </head>
 <body>
-  <div class="container">
+  <div>
+
+  </div>
+  <div class="container-fluid">
     <div class="row">
-      <div class="card-group position-absolute top-50 start-50 translate-middle">
+      <div class="card-group">
 
         <div class="col">
           <div class="card border-0" id="sedansCard">
