--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a href="./OrderSummaryComponent/index.html" target="_blank">Order Summary Card</a>
     </div> 
 
-    <!-- <div>
+    <div>
         <a href="./huddle-landing-page-with-single-introductory-section/index.html" target="_blank">Huddle Landing Page</a>
-    </div>  -->
+    </div> 
     
     
 </body>
