update border radius and responsive settings

--- a/3ColumnPreviewCardComponent/index.html
+++ b/3ColumnPreviewCardComponent/index.html
@@ -18,8 +18,8 @@
   <div>
 
   </div>
-  <div class="container-fluid">
-    <div class="row">
+  <div class="container container-fluid">
+    <div class="row" id="mainCard">
       <div class="card-group">
 
         <div class="col">
