--- a/3ColumnPreviewCardComponent/index.html
+++ b/3ColumnPreviewCardComponent/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./css/styles.css"/>
 
-  <!-- <link rel="stylesheet" href="https://fonts.google.com/specimen/Lexend+Deca">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Big+Shoulders+Display"> -->
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Lexend+Deca">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Big+Shoulders+Display">
   
   <title>Three-Column Preview Card Component</title>
 
