ping coming soon page

--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -43,7 +43,7 @@
           <div class="form-group mx-sm-3 mb-2">
             <label for="emailAddress"></label>
             <input type="email" class="form-control" id="emailAddress" name="emailAddress" placeholder="Email Address" required>
-            <div class="errorMessage" name="emailError" id="emailError"></div>
+            <span class="errorMessage" name="emailError" id="emailError"></span>
             <button type="submit" class="btn btn-primary mb-2">Submit</button>
             
           </div>
